<resources>
    <string name="app_name">Film Catalog</string>
    <string name="label_poster">poster</string>

    <!-- CONNECTION PROBLEM -->
    <string name="failed_connect">
        <![CDATA[
        Oops there is problem when try connect to server, please wait a moment or recheck your internet connections.
        ]]>
    </string>
    <string name="label_refresh">refresh</string>
    <string name="label_plot">Plot</string>
    <string name="label_production">Production</string>
    <string name="hint_search_film">Cari Film</string>
    <string name="tambah_favorite">Berhasil menambahkan ke favorite</string>
    <string name="hapus_favorite">Berhasil Menghapus dari Favorite</string>
    <string name="empty_list">Tidak Ada Favorites</string>
    <string name="list_favorite">Favorites</string>
</resources>
