<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/swipeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/searchLyt"
            android:layout_alignParentTop="true"
            android:background="@drawable/edit_text_square"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp">

            <AutoCompleteTextView
                android:id="@+id/searchEdt"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:textColorHint="@android:color/darker_gray"
                android:hint="@string/hint_search_film"
                android:imeOptions="actionDone"
                android:inputType="text"
                tools:ignore="Autofill,LabelFor"/>

            <LinearLayout
                android:id="@+id/searchDrawableLyt"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/searchDrawable"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@drawable/ic_search"
                    android:tint="@android:color/darker_gray"
                    android:tintMode="src_in"/>
            </LinearLayout>
        </RelativeLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:layout_below="@+id/searchLyt"
            android:id="@+id/rvListFilm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:listitem="@layout/item_list_film" />

        <RelativeLayout
            android:id="@+id/errorLyt"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="20dp"
            android:visibility="gone">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="160dp"
                android:layout_height="160dp"
                android:layout_above="@id/tvError"
                android:layout_centerHorizontal="true"
                android:src="@drawable/ic_error_connection" />

            <TextView
                android:id="@+id/tvError"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/failed_connect"
                android:textSize="16sp" />

            <Button
                android:id="@+id/btnRefresh"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:background="@drawable/bg_rounded_blue"
                android:text="@string/label_refresh"
                android:textColor="@android:color/white" />
        </RelativeLayout>
    </RelativeLayout>
</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>