<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_detail_film"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:fitsSystemWindows="true">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar_detail_film"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsingToolbarDetailFilm"
            android:layout_width="match_parent"
            android:layout_height="256dp"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">

            <ImageView
                android:id="@+id/ivPosterFilm"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/label_poster"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_video"
                app:layout_collapseMode="parallax" />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar_detail_film"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:layout_gravity="top"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:titleTextColor="@android:color/black" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:id="@+id/successLyt"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/tvTitleFilm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:text="Avengers" />

            <TextView
                android:id="@+id/tvTypeFilm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                tools:text="Romance" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal"
                android:weightSum="3">

                <TextView
                    android:id="@+id/tvReleaseFilm"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableStart="@drawable/ic_date"
                    android:drawablePadding="5dp"
                    android:drawableTint="@color/colorAccent"
                    android:gravity="center"
                    android:padding="5dp"
                    android:textColor="@color/colorAccent"
                    android:textSize="13sp"
                    tools:targetApi="m"
                    tools:text="2011" />

                <TextView
                    android:id="@+id/tvRuntimeFilm"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableStart="@drawable/ic_time"
                    android:drawablePadding="5dp"
                    android:drawableTint="@color/colorAccent"
                    android:gravity="center"
                    android:padding="5dp"
                    android:textColor="@color/colorAccent"
                    android:textSize="13sp"
                    tools:targetApi="m"
                    tools:text="2011" />

                <TextView
                    android:id="@+id/tvRatingFilm"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableStart="@drawable/ic_star_black_24dp"
                    android:drawablePadding="5dp"
                    android:drawableTint="@color/colorAccent"
                    android:gravity="center"
                    android:padding="5dp"
                    android:textColor="@color/colorAccent"
                    android:textSize="13sp"
                    tools:targetApi="m"
                    tools:text="2011" />
            </LinearLayout>

            <TextView
                android:id="@+id/tvPlotFilm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:textSize="15sp"
                tools:text="@string/failed_connect" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_production"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvProductionFilm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnFavorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:clickable="true"
        android:focusable="true"
        android:src="@drawable/ic_favorite"
        android:tint="@android:color/white"
        app:layout_anchor="@+id/appbar_detail_film"
        app:layout_anchorGravity="bottom|right|end" />

    <RelativeLayout
        android:id="@+id/errorLyt"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp"
        android:visibility="gone">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_above="@id/tvError"
            android:layout_centerHorizontal="true"
            android:src="@drawable/ic_error_connection" />

        <TextView
            android:id="@+id/tvError"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/failed_connect"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btnRefresh"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:background="@drawable/bg_rounded_blue"
            android:text="@string/label_refresh"
            android:textColor="@android:color/white" />
    </RelativeLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
